docs: add support for searching with api.github.com's url in gh-pages

--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,10 @@ pre code.sample-request-response-json {
   font-size: 14px;
 }
 
+.sidenav > li > span {
+  display: none;
+}
+
 .sidenav > li.nav-header {
   margin-top: 8px;
   margin-bottom: 8px;
